<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<!--
		Maven cheat sheet <http://blog.octo.com/maven-mes-plugins-preferes/>
		mvn help:active-profiles
		mvn help:effective-pom
		mvn help:evaluate
		mvn dependency:tree
		mvn versions:display-dependency-updates
		mvn versions:display-plugin-updates
		mvn versions:update-child-modules
		mvn versions:set -DnewVersion=VALUE

		mvn -Dmaven.test.skip clean assembly:single -DdescriptorId=jar-with-dependencies
	 -->

	<!-- - - - - - - - - - -->
	<!-- POM Relationships -->
	<!-- - - - - - - - - - -->

	<!-- Coordinates -->
	<groupId>fr.cedrik.inotes</groupId>
	<artifactId>iNotes-exporter</artifactId>
	<version>1.8</version>

	<!-- Inheritance -->
	<!--parent>
		<groupId></groupId>
		<artifactId></artifactId>
		<version></version>
	</parent-->

	<!-- Inheritance & Dependencies -->
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-framework-bom</artifactId>
				<version>${spring.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<!-- Dependencies -->
	<dependencies>
		<!-- Compile-time dependencies (default scope) -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>${slf4j.version}</version>
			<scope>provided</scope><!-- "compile" since we can manage log levels at runtime (LOGGER POP3 command) -->
		</dependency>
		<!--dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20140107</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.mnode.ical4j</groupId>
			<artifactId>ical4j</artifactId>
			<version>1.0.5.2</version>
			<scope>compile</scope>
		</dependency-->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.3.2</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.4</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context-support</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>mail</artifactId>
			<version>1.4.7</version>
			<scope>provided</scope>
		</dependency>
		<!-- Provided dependencies -->
		<dependency><!-- not needed on Java 6, but transitive deps loads it anyway... -->
			<groupId>javax.activation</groupId>
			<artifactId>activation</artifactId>
			<version>1.1.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency><!-- included in Java SE 6; avoid adding as dependency -->
			<groupId>javax.annotation</groupId>
			<artifactId>jsr250-api</artifactId>
			<version>1.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>1.2</version>
			<scope>provided</scope><!-- prevents any version of commons-logging to be bundled with the final artifact -->
			<optional>true</optional>
		</dependency>
		<!-- Run-time dependencies -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jcl-over-slf4j</artifactId>
			<version>${slf4j.version}</version>
			<scope>runtime</scope>
		</dependency>
		<!--dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>${slf4j.version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>apache-log4j-extras</artifactId>
			<version>1.2.17</version>
			<scope>runtime</scope>
		</dependency-->
		<!-- Test-time dependencies -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<!-- - - - - - - - - - - -->
	<!-- Project Information -->
	<!-- - - - - - - - - - - -->

	<name>iNotes-exporter</name>
	<description>Lotus Domino iNotes exporter (mbox, maildir &amp; POP3)</description>
	<url>https://github.com/javabean/iNotes-exporter</url>
	<inceptionYear>2012</inceptionYear>

	<licenses>
		<license>
			<name>BSD</name>
			<url>http://www.opensource.org/licenses/bsd-license.php</url>
			<distribution>manual</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>clime</id>
			<name>Cédrik LIME</name>
			<email>cedrik_lime@users.sourceforge.net</email>
			<url>http://cedrik.tel</url>
			<roles>
				<role>architect</role>
				<role>developer</role>
			</roles>
			<timezone>+1</timezone>
		</developer>
	</developers>

	<contributors></contributors>

	<organization>
		<name>Cédrik LIME</name>
		<url>https://github.com/javabean/iNotes-exporter/</url>
	</organization>

	<!-- - - - - - - -  -->
	<!-- Build Settings -->
	<!-- - - - - - - -  -->

	<packaging>jar</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<slf4j.version>1.7.7</slf4j.version>
		<spring.version>3.2.11.RELEASE</spring.version>
	</properties>

	<build>
		<!--filters>
			<filter>src/main/filters/filter.properties</filter>
		</filters-->
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>false</filtering>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<encoding>${project.build.sourceEncoding}</encoding>
					<debug>true</debug>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<compress>true</compress>
						<index>false</index><!-- This is no Applet nor WebStart -->
						<addMavenDescriptor>false</addMavenDescriptor>
						<!--manifestFile>META-INF/MANIFEST.MF</manifestFile-->
						<manifest>
							<mainClass>fr.cedrik.email.MainRunner</mainClass>
							<!--packageName>com.mycompany.app</packageName-->
							<addClasspath>true</addClasspath>
							<!--addExtensions/-->
							<!--classpathPrefix/--><!-- This gets prefixed to all classpath entries -->
							<!-- Starting with version 2.1, the maven-jar-plugin no longer creates the Specification and Implementation details in the manifest by default. -->
							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
						</manifest>
						<manifestEntries>
							<!--manifest_entry>value</manifest_entry-->
							<Sealed>false</Sealed>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
					<!--finalName>${project.build.finalName}</finalName-->
					<archive>
						<compress>true</compress>
						<index>false</index><!-- This is no Applet nor WebStart -->
						<addMavenDescriptor>false</addMavenDescriptor>
						<!--manifestFile>META-INF/MANIFEST.MF</manifestFile-->
						<manifest>
							<mainClass>fr.cedrik.email.MainRunner</mainClass>
							<!--packageName>com.mycompany.app</packageName-->
							<addClasspath>true</addClasspath>
							<!--addExtensions/-->
							<!--classpathPrefix/--><!-- This gets prefixed to all classpath entries -->
							<!-- Starting with version 2.1, the maven-jar-plugin no longer creates the Specification and Implementation details in the manifest by default. -->
							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
						</manifest>
						<manifestEntries>
							<!--manifest_entry>value</manifest_entry-->
							<Sealed>false</Sealed>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>jar</goal>
						</goals>
						<inherited/>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<reporting>
		<!--excludeDefaults>true</excludeDefaults--><!-- turns off project-info reports: see plugin  maven-project-info-reports-plugin  -->
		<plugins>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
			</plugin>
			<!--plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
			</plugin-->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>jxr-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</reporting>

	<!-- - - - - - - - - - -->
	<!-- Build Environment -->
	<!-- - - - - - - - - - -->

	<!-- Environment Information -->
	<!--issueManagement>
		<system></system>
		<url></url>
	</issueManagement-->
	<ciManagement></ciManagement>
	<mailingLists></mailingLists>
	<scm>
		<connection>git://github.com/javabean/iNotes-exporter.git</connection>
		<developerConnection>git@github.com:javabean/iNotes-exporter.git</developerConnection>
		<tag>HEAD</tag>
		<url>git://github.com/javabean/iNotes-exporter.git</url>
	</scm>

	<!-- Maven Environment -->
	<prerequisites>
		<maven>3.0.4</maven>
	</prerequisites>
	<repositories></repositories>
	<pluginRepositories></pluginRepositories>
	<distributionManagement></distributionManagement>

	<profiles>
	</profiles>
</project>
